<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/service_name"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstName"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/service_provider"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstProvider"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/service_Price"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstPrice"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/service_type"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstType"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/service_city"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstCity"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/service_time"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstStart"
            android:layout_width="323dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/service_to"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstEnd"
            android:layout_width="323dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/service_state"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_curCstState"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="30dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_curCstCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="#FFBBFF"
            android:text="@string/service_cancel"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_curCstCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#FFBBFF"
            android:text="@string/service_confirm"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/devidedline" />

    </LinearLayout>
</LinearLayout>
