<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintHorizontal_bias="0.1"
            android:textSize="22sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/order_method"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintHorizontal_bias="1"
            android:textSize="22sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/order_method"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rdoBtn_dialog_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:text="@string/order_phone" />

            <RadioButton
                android:id="@+id/rdoBtn_dialog_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:text="@string/order_mobile" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.1"
            android:textSize="22sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/order_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ev_dialog_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:textSize="22sp"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
